--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -234,10 +234,12 @@ body {
           .stats {
             display: block;
             margin: 5px 0;
+            font-size: 1rem;
 
             span {
               display: block;
               margin: 5px 0;
+              font-size: 1.5rem;
             }
           }
         }
